# FACSPyUI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
FACSPyQT/: app.py  app.spec  app_debug.py  cofactors_bm.csv  metadata_bm.csv  panel.csv
FACSPyQT/_main_window/: _menubar.py  _toolbar.py
FACSPyQT/_main_window/_analysis_menus/: _analysis_menu.py  _dataset_sampling.py  _integration.py  _mfi.py  _sw_dimensionality_reductions.py  _transformations.py
FACSPyQT/_main_window/_analyze_dataset/: __init__.py  _cell_counts.py  _cluster_abundance.py  _cluster_frequency.py  _cluster_heatmap.py  _config_panel.py  _expression_heatmap.py  _gate_frequency.py  _marker_correlation.py  _marker_density.py  _mfi.py  _plot_window.py  _sample_distance.py  _transformation_plot.py
FACSPyQT/_main_window/_create_dataset/: __init__.py  _panel_tab.py
FACSPyUI/: FACSPyUI.py  FACSPyUI.spec  app.spec  app_debug.py  breeze_resources.py  setup.py
FACSPyUI/.github/workflows/: build.yml
FACSPyUI/_main_window/: __init__.py  _filehandler.py  _menubar.py  _paths.py  _toolbar.py  _utils.py
FACSPyUI/_main_window/_analysis_menus/: __init__.py  _analysis_menu.py  _clustering.py  _edit_supplements.py  _fop.py  _gate_frequency.py  _integration.py  _mfi.py  _sc_dimensionality_reductions.py  _sw_dimensionality_reductions.py  _transformations.py
FACSPyUI/_main_window/_analyze_dataset/: _biax.py  _cell_counts.py  _cluster_abundance.py  _cluster_frequency.py  _cluster_heatmap.py  _config_panel.py  _expression_heatmap.py  (+14 more)
FACSPyUI/_stylesheets/: __init__.py  _dark.py  _light.py
(+6 files in other folders)
