[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FACSPyUI"
version = "0.0.1"
authors = [
  { name="Tarik Exner", email="Tarik.Exner@med.uni-heidelberg.de" },
]
description = "Automated Flow Cytometry Analysis User Interface"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # "facspy",
    "pyqt5",
    "plotly",
    "pyinstaller",
    "PyQtWebEngine"
]

